--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
                 </div>
             </div>
         </section>
+
+       <!-- portfolio section -->
+
+        <section class="portfolio-section">
+            <div class="portfolio-content">
+                <div class="portfolio-content-info">
+                    <h3 class="portfolio-content">THE BEST GIFTS</h3>
+                    <h1 class="portfolio-title">Our Awesome Portfolio</h1>
+                    <p class="portfolio-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+            </div>
+            <div class="portfolio-images">
+                <img src="images/Rectangle 3.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+                <img src="images/Rectangle 7.png" alt="">
+                <img src="images/Rectangle 8.png" alt="">
+            </div>
+    </section>
+
     </main>
 
 
