added email & subscribed section

--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
             </div>
     </section>
 
+    <!--email or subscribe section-->
+    <section>
+        <div class="email-content">
+            <div class="email-content-info">
+                <img src="images/Group 61.png" alt="">
+                <h1 class="subscribe">Subscribe Newsletter</h1>
+                <p class="email-content-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <form class="input-form">
+                <input class="email" type="email" name="" id="" placeholder="user@gmail.com">
+                <input class="submit" type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+   </section>
+
     </main>
 
 
