added footer section

--- a/index.html
+++ b/index.html
@@ -161,10 +161,35 @@
 
     </main>
 
+<!--footer section-->
+<footer>
+    <div class="footer-container">
+        <div class="footer-info">
+            <div>
+                <p class="footer-des">44, Big Building Roosevelt Street
+                <br> Beach Gardens Florida 33410</p>
+            </div>
+            <div>
+                <p><img style="margin-right: 5px;" src="images/Call.png" alt=""> +00 123 584 124</p>
+                <p><img style="margin-right: 5px;" src="images/Website.png" alt=""> www.website.com</p>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-img">
+            <img src="images/Facebook.png" alt="">
+            <img src="images/Instagram.png" alt="">
+            <img src="images/Twitter.png" alt="">
+            <img src="images/Linkedin.png" alt="">
+        </div>
+    </div>
+    <hr>
+    <div class="last-footer">
+        <p class="copyright">2017, All Rights Reserved.</p>
+        <p class>Unsubscribe</p>
+    </div>
 
-    <footer>
+</footer>
 
-    </footer>
 
 </body>
 
